syntax = "proto3";

package sumURPC;

option go_package = "./";

message SumReqt {
    int32 first_number =1;
    int32 second_number=2;
}

message SumResp{
    int32 result = 1;
}